[gd_scene load_steps=3 format=2]

[ext_resource path="res://m5_atlas_ccbitem.png" type="Texture" id=1]
[ext_resource path="res://Fish.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="fish_raw" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 1370.24, 445.239, 83.4862, 67.5256 )

[node name="fish_welldone" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 1276, 438, 88, 77 )

[node name="fish_scorched" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 1918.34, 152.792, 88.2111, 68.0927 )

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_right = 40.0
margin_bottom = 40.0
fill_mode = 4

[node name="TextureProgress2" type="TextureProgress" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true
